--- a/suwo_testing.ipynb
+++ b/suwo_testing.ipynb
@@ -163,68 +163,157 @@
     {
       "cell_type": "code",
       "source": [
-        "source(\"./tests/testthat/test_query_xenocanto.R\")\n"
+        "tests <- list.files(\"./tests/testthat\", pattern = \"R$\", full.names = TRUE)\n",
+        "tests"
       ],
       "metadata": {
-        "id": "JEDFE9xfwrhZ"
+        "id": "7FIP5Q7PkfVq",
+        "outputId": "ed5c7f5c-05e4-4e39-86a2-67430d298c3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              ".list-inline {list-style: none; margin:0; padding: 0}\n",
+              ".list-inline>li {display: inline-block}\n",
+              ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+              "</style>\n",
+              "<ol class=list-inline><li>'./tests/testthat/test_download_media.R'</li><li>'./tests/testthat/test_find_duplicates.R'</li><li>'./tests/testthat/test_gbif_datasets.R'</li><li>'./tests/testthat/test_merge_metadata.R'</li><li>'./tests/testthat/test_query_gbif.R'</li><li>'./tests/testthat/test_query_inaturalist.R'</li><li>'./tests/testthat/test_query_macaulay.R'</li><li>'./tests/testthat/test_query_observation.R'</li><li>'./tests/testthat/test_query_wikiaves.R'</li><li>'./tests/testthat/test_query_xenocanto.R'</li><li>'./tests/testthat/test_update_metadata.R'</li></ol>\n"
+            ],
+            "text/markdown": "1. './tests/testthat/test_download_media.R'\n2. './tests/testthat/test_find_duplicates.R'\n3. './tests/testthat/test_gbif_datasets.R'\n4. './tests/testthat/test_merge_metadata.R'\n5. './tests/testthat/test_query_gbif.R'\n6. './tests/testthat/test_query_inaturalist.R'\n7. './tests/testthat/test_query_macaulay.R'\n8. './tests/testthat/test_query_observation.R'\n9. './tests/testthat/test_query_wikiaves.R'\n10. './tests/testthat/test_query_xenocanto.R'\n11. './tests/testthat/test_update_metadata.R'\n\n\n",
+            "text/latex": "\\begin{enumerate*}\n\\item './tests/testthat/test\\_download\\_media.R'\n\\item './tests/testthat/test\\_find\\_duplicates.R'\n\\item './tests/testthat/test\\_gbif\\_datasets.R'\n\\item './tests/testthat/test\\_merge\\_metadata.R'\n\\item './tests/testthat/test\\_query\\_gbif.R'\n\\item './tests/testthat/test\\_query\\_inaturalist.R'\n\\item './tests/testthat/test\\_query\\_macaulay.R'\n\\item './tests/testthat/test\\_query\\_observation.R'\n\\item './tests/testthat/test\\_query\\_wikiaves.R'\n\\item './tests/testthat/test\\_query\\_xenocanto.R'\n\\item './tests/testthat/test\\_update\\_metadata.R'\n\\end{enumerate*}\n",
+            "text/plain": [
+              " [1] \"./tests/testthat/test_download_media.R\"   \n",
+              " [2] \"./tests/testthat/test_find_duplicates.R\"  \n",
+              " [3] \"./tests/testthat/test_gbif_datasets.R\"    \n",
+              " [4] \"./tests/testthat/test_merge_metadata.R\"   \n",
+              " [5] \"./tests/testthat/test_query_gbif.R\"       \n",
+              " [6] \"./tests/testthat/test_query_inaturalist.R\"\n",
+              " [7] \"./tests/testthat/test_query_macaulay.R\"   \n",
+              " [8] \"./tests/testthat/test_query_observation.R\"\n",
+              " [9] \"./tests/testthat/test_query_wikiaves.R\"   \n",
+              "[10] \"./tests/testthat/test_query_xenocanto.R\"  \n",
+              "[11] \"./tests/testthat/test_update_metadata.R\"  "
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "source(\"./tests/testthat/test_query_gbif.R\")\n"
+        "for (i in tests){\n",
+        "print(basename(i))\n",
+        "source(i)\n",
+        "}"
       ],
       "metadata": {
-        "id": "m2-SZSlyiy2y"
+        "id": "6K9YnHGzlj3b",
+        "outputId": "536f0d9a-2c03-4559-d2bf-eb31a4f154ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "source(\"./tests/testthat/test_query_inaturalist.R\")\n"
-      ],
-      "metadata": {
-        "id": "U7a74suei0rf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "source(\"./tests/testthat/test_taxon_code_search.R\")"
-      ],
-      "metadata": {
-        "id": "vKC3irO3xf3V"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "source(\"./tests/testthat/test_gbif_datasets.R\")"
-      ],
-      "metadata": {
-        "id": "1M8y6SuF0TpX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "source(\"./tests/testthat/test_query_wikiaves.R\")"
-      ],
-      "metadata": {
-        "id": "ouWloAgBxa52"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1] \"test_download_media.R\"\n",
+            "\u001b[32mTest passed\u001b[39m 🌈\n",
+            "\u001b[32mTest passed\u001b[39m 😀\n",
+            "\u001b[32mTest passed\u001b[39m 🥇\n",
+            "\u001b[32mTest passed\u001b[39m 😀\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "\u001b[32mTest passed\u001b[39m 🎉\n",
+            "\u001b[32mTest passed\u001b[39m 😀\n",
+            "\u001b[32mTest passed\u001b[39m 🎉\n",
+            "\u001b[32mTest passed\u001b[39m 🥇\n",
+            "── \u001b[1m\u001b[34mSkip\u001b[39m: search macaulay sp download all_data = TRUE\u001b[22m ───────────────────────────\n",
+            "Reason: interactive() is not TRUE\n",
+            "\n",
+            "── \u001b[1m\u001b[34mSkip\u001b[39m: search macaulay Harpia harpyja download sound all_data = FALSE\u001b[22m ────────\n",
+            "Reason: interactive() is not TRUE\n",
+            "\n",
+            "── \u001b[1m\u001b[34mSkip\u001b[39m: search macaulay sp download video all_data = FALSE\u001b[22m ────────────────────\n",
+            "Reason: interactive() is not TRUE\n",
+            "\n",
+            "[1] \"test_find_duplicates.R\"\n",
+            "\u001b[32mTest passed\u001b[39m 😀\n",
+            "[1] \"test_gbif_datasets.R\"\n",
+            "\u001b[32mTest passed\u001b[39m 🥳\n",
+            "[1] \"test_merge_metadata.R\"\n",
+            "\u001b[32mTest passed\u001b[39m 🌈\n",
+            "[1] \"test_query_gbif.R\"\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "No connection to GBIF API (check your internet connection!)\n",
+            "\u001b[32mTest passed\u001b[39m 🥇\n",
+            "\u001b[32mTest passed\u001b[39m 😀\n",
+            "\u001b[32mTest passed\u001b[39m 😸\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "12 observations do not have a download link and were removed from the results (saved at `options('gbif_excluded_results')`).\u001b[32mTest passed\u001b[39m 🥇\n",
+            "\u001b[32mTest passed\u001b[39m 🥇\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "[1] \"test_query_inaturalist.R\"\n",
+            "\u001b[32mTest passed\u001b[39m 🌈\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "\u001b[32mTest passed\u001b[39m 🎉\n",
+            "\u001b[32mTest passed\u001b[39m 😀\n",
+            "\u001b[32mTest passed\u001b[39m 🥳\n",
+            "\u001b[32mTest passed\u001b[39m 🥳\n",
+            "\u001b[32mTest passed\u001b[39m 🥳\n",
+            "[1] \"test_query_macaulay.R\"\n",
+            "── \u001b[1m\u001b[34mSkip\u001b[39m: search Glaucis dohrnii sound\u001b[22m ──────────────────────────────────────────\n",
+            "Reason: interactive() is not TRUE\n",
+            "\n",
+            "── \u001b[1m\u001b[34mSkip\u001b[39m: search Glaucis dohrnii images\u001b[22m ─────────────────────────────────────────\n",
+            "Reason: interactive() is not TRUE\n",
+            "\n",
+            "── \u001b[1m\u001b[34mSkip\u001b[39m: paging by date\u001b[22m ────────────────────────────────────────────────────────\n",
+            "Reason: interactive() is not TRUE\n",
+            "\n",
+            "[1] \"test_query_observation.R\"\n",
+            "Species was not found in database\u001b[32mTest passed\u001b[39m 😀\n",
+            "Species was not found in database\u001b[32mTest passed\u001b[39m 🎉\n",
+            "Invalid token for observation.org\u001b[32mTest passed\u001b[39m 🌈\n",
+            "[1] \"test_query_wikiaves.R\"\n",
+            "\u001b[32mTest passed\u001b[39m 😀\n",
+            "\u001b[32mTest passed\u001b[39m 🌈\n",
+            "\u001b[32mTest passed\u001b[39m 🌈\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "\u001b[32mTest passed\u001b[39m 😀\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "[1] \"test_query_xenocanto.R\"\n",
+            "\u001b[32mTest passed\u001b[39m 🥇\n",
+            "\u001b[32mTest passed\u001b[39m 🥳\n",
+            "\u001b[32mTest passed\u001b[39m 🌈\n",
+            "\u001b[32mTest passed\u001b[39m 🥳\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "\u001b[32mTest passed\u001b[39m 🥳\n",
+            "[1] \"test_update_metadata.R\"\n",
+            "\u001b[32mTest passed\u001b[39m 🥇\n",
+            "\u001b[32mTest passed\u001b[39m 🥳\n",
+            "\u001b[32mTest passed\u001b[39m 🎊\n",
+            "\u001b[32mTest passed\u001b[39m 🥳\n",
+            "── \u001b[1m\u001b[34mSkip\u001b[39m: update query_macaulay\u001b[22m ─────────────────────────────────────────────────\n",
+            "Reason: interactive() is not TRUE\n",
+            "\n",
+            "── \u001b[1m\u001b[34mSkip\u001b[39m: update query_macaulay with paging\u001b[22m ─────────────────────────────────────\n",
+            "Reason: interactive() is not TRUE\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
